// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComparisonCard should match snapshot 1`] = `
<div
  className="compare-data-card"
>
  <div
    className="district-title"
  >
    Aggregate Avg.
    <p
      className="district-high"
    />
  </div>
  <p
    className="comparison-value"
  />
  <div
    className="district-title"
  >
    Aggregate Avg.
    <p
      className="district-high"
    />
  </div>
</div>
`;

exports[`ComparisonCard should match snapshot 2`] = `
<div
  className="compare-data-card"
>
  <div
    className="district-title"
  >
    Aggregate Avg.
    <p
      className="district-low"
    >
      0.407
    </p>
  </div>
  <p
    className="comparison-value"
  >
    0.768
  </p>
  <div
    className="district-title"
  >
    Aggregate Avg.
    <p
      className="district-high"
    >
      0.53
    </p>
  </div>
</div>
`;
